--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,6 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
-dist-ssr
 *.local
 
 # Editor directories and files
@@ -22,3 +20,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Build files - keep them in git for GitHub Pages
+export default defineConfig;
